gl31-master/src/test/deca/context/valid/complet/boolean_class.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 19/01/2021
class Test{
    boolean b;
    protected boolean c;
    boolean d;

    void methTest(boolean param){
        if(param && b){
            print("oui");
        }
        else if(param || c){
            print("non");
        }
        else if(d){
            print("jamais");
        }
        else{
            print("rate");
        }
    }
}
