gl31-master/src/test/deca/context/invalid/complet/bad_if_meth.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 16: Erreur, testMeth ne renvoie pas un boolean
//
// Historique:
//    cree le 20/01/2021
class A{
    int testMeth(){
        return 2;
    }
}
{
    A a;
    if(a.testMeth()){
        print("no");
    }
}
